[package]
name = "chatons"
version = "0.1.0"
edition = "2024"
description = "A WASM component-model plugin host for kitty — load chatons written in any language."
license = "MIT"

[[bin]]
name = "chatons"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "27", features = ["component-model"] }
wasmtime-wasi = "27"
anyhow = "1"
crossterm = "0.28"
base64 = "0.22"
ureq = "2"
serde_json = "1"
wtransport = { version = "0.6", features = ["self-signed"] }
iroh = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
